--- a/externe_site.html
+++ b/externe_site.html
@@ -8,7 +8,7 @@
 
 <body>
     <h1>HTML5 video</h1>
-    <video controls src="filmpje.mp4" poster="https://via.placeholder.com/150x150" width="400" height="300"></video>
+    <video controls src="https://giessenburg.github.io/nhastudie.github.io/filmpje.mp4" poster="https://via.placeholder.com/150x150" width="400" height="300"></video>
 </body>
 
 </html>
