--- a/info.html
+++ b/info.html
@@ -10,7 +10,7 @@
 
 <body>
     <header id="logo">
-        <img src="afbeeldingen/kinderdijk.png" alt="Logo Kinderdijk" width="200">
+        <img src="kinderdijk.png" alt="Logo Kinderdijk" width="200">
         <h1>Unesco Werelderfgoed Kinderdijk</h1>
         <nav>
             <a href="index.html">Home</a>
