--- a/galerij.html
+++ b/galerij.html
@@ -10,7 +10,7 @@
 
 <body>
     <header id="logo">
-        <img src="afbeeldingen/kinderdijk.png" alt="Logo Kinderdijk" width="200">
+        <img src="kinderdijk.png" alt="Logo Kinderdijk" width="200">
         <h1>Unesco Werelderfgoed Kinderdijk</h1>
         <nav>
             <a href="index.html">Home</a>
@@ -29,17 +29,17 @@
     </div>
     <div id="fotos">
         <figure>
-            <img src="afbeeldingen/kinderdijk01.jpg" width="400" alt="Molens van kinderdijk"
+            <img src="kinderdijk01.jpg" width="400" alt="Molens van kinderdijk"
                 title="De molens van Kinderdijk">
             <figcaption>De molens van Kinderdijk</figcaption>
         </figure>
         <figure>
-            <img src="afbeeldingen/kinderdijk02.jpg" width="400" alt="Verlichte molens van kinderdijk"
+            <img src="kinderdijk02.jpg" width="400" alt="Verlichte molens van kinderdijk"
                 title="verlichte molens van Kinderdijk">
             <figcaption>De verlichte molens van Kinderdijk</figcaption>
         </figure>
         <figure>
-            <img src="afbeeldingen/kinderdijk03.jpg" width="400" alt="Schaatsen bij de molens" title="Schaatsen bij de molens van
+            <img src="kinderdijk03.jpg" width="400" alt="Schaatsen bij de molens" title="Schaatsen bij de molens van
         Kinderdijk">
             <figcaption>Schaatsen bij de molens van Kinderdijk</figcaption>
         </figure>
@@ -47,7 +47,7 @@
     <hr>
     <div id="geluid">
         <h3>Luister hieronder naar het vrolijke gezang van de vogeltjes:</h3>
-        <audio controls src="geluid/vogels.mp3"></audio>
+        <audio controls src="vogels.mp3"></audio>
     </div>
     <footer id="footer">
         <hr>
