--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 
 <body>
     <header>
+        <h1>Logo omdraaien? Dan bent u hier aan het juiste adres!</h1>
     </header>
     <div>
         <label class="tekst">Klik hier om het logo te draaien:</label> <input type="button" class="btnRotate" value="90"
